@@ -52,7 +52,7 @@ const UString InternalFunction::displayName(JSGlobalData* globalData)
 {
     JSValuePtr displayName = getDirect(globalData->propertyNames->displayName);
     
-    if (displayName)
+    if (displayName && isJSString(globalData, displayName))
         return asString(displayName)->value();
     
     return UString::null();
